--- a/templates/user.xml
+++ b/templates/user.xml
@@ -5,4 +5,10 @@
       <option name="JAVA_DECLARATION" value="true" />
     </context>
   </template>
+  <template name="logger" value="private static final org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger($CLASS$.class);" toReformat="true" toShortenFQNames="true">
+    <variable name="CLASS" expression="className()" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_DECLARATION" value="true" />
+    </context>
+  </template>
 </templateSet>
